5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1646_2450.log
== TEST (2019-04-14 21:00:55) 
-- CODE:
A=input("nome:")
B=input("nume:")

print(A.sort,B.sort)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(A.sort,B.sort)
AttributeError: 'str' object has no attribute 'sort'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:04:38) 
-- CODE:
A=input("nome:")
B=input("nume:")
a=sorted(A)
b=sorted(B)

if(a>b):
	print(A)
	print(B)
else:
	print(B)
	print(A)


-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:05:13) 
-- CODE:
A=input("nome:")
B=input("nume:")
a=sorted(A)
b=sorted(B)

if(a>b):
	print(A.upper)
	print(B.upper)
else:
	print(B.upper)
	print(A.upper)


-- OUTPUT:
<built-in method upper of str object at 0x7f8e6881c5e0>
<built-in method upper of str object at 0x7f8e6881c618>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:05:19) 
-- CODE:
A=input("nome:")
B=input("nume:")
a=sorted(A)
b=sorted(B)

if(a>b):
	print(A.upper)
	print(B.upper)
else:
	print(B.upper)
	print(A.upper)


-- OUTPUT:
<built-in method upper of str object at 0x7fe04a0545e0>
<built-in method upper of str object at 0x7fe04a054618>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:06:11) 
-- CODE:
A=input("nome:")
B=input("nume:")
a=sorted(A)
b=sorted(B)

if(a>b):
	print(A.upper())
	print(B.upper())
else:
	print(B.upper())
	print(A.upper())


-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:06:20) 
-- CODE:
A=input("nome:")
B=input("nume:")
a=sorted(A)
b=sorted(B)

if(a>b):
	print(A.upper())
	print(B.upper())
else:
	print(B.upper())
	print(A.upper())


-- EXECUTION TIME:
0.176107
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:06:33) 
-- CODE:
A=input("nome:")
B=input("nume:")
a=sorted(A)
b=sorted(B)

if(a>b):
	print(A)
	print(B)
else:
	print(B)
	print(A)


-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:06:36) 
-- CODE:
A=input("nome:")
B=input("nume:")
a=sorted(A)
b=sorted(B)

if(a>b):
	print(A)
	print(B)
else:
	print(B)
	print(A)


-- EXECUTION TIME:
0.139731
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:06:43) 
-- CODE:
A=input("nome:")
B=input("nume:")
a=sorted(A)
b=sorted(B)

if(A>B):
	print(A)
	print(B)
else:
	print(B)
	print(A)


-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:07:59) 
-- CODE:
A=input("nome:")
B=input("nume:")

if(A>B):
	c=A.upper
	d=B.upper
	print(c)
	print(d)
else:
	c=A.upper
	d=B.upper
	print(c)
	print(d)

-- OUTPUT:
<built-in method upper of str object at 0x7fdaf81fa618>
<built-in method upper of str object at 0x7fdaf81fa5e0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:08:21) 
-- CODE:
A=input("nome:")
B=input("nume:")

if(A>B):
	c=A.upper()
	d=B.upper()
	print(c)
	print(d)
else:
	c=A.upper()
	d=B.upper()
	print(c)
	print(d)

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:08:31) 
-- CODE:
A=input("nome:")
B=input("nume:")

if(A>B):
	c=A.upper()
	d=B.upper()
	print(c)
	print(d)
else:
	c=A.upper()
	d=B.upper()
	print(c)
	print(d)

-- EXECUTION TIME:
0.173597
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:10:27) 
-- CODE:
A=input("nome:".upper())
B=input("nume:".upper())

if(A>B):
	
	print(c)
	print(d)
else:
	
	print(c)
	print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:10:42) 
-- CODE:
A=input("nome:".upper())
B=input("nume:".upper())

if(A>B):
	
	print(A)
	print(B)
else:
	
	print(A)
	print(B)

-- OUTPUT:
NOME:NUME:Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:11:17) 
-- CODE:
A=input("nome:".upper())
B=input("nume:".upper())

if(A>B):
	print(A)
	print(B)
else:
	print(A)
	print(B)

-- OUTPUT:
NOME:NUME:Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:11:25) 
-- CODE:
A=input("nome:".upper())
B=input("nume:".upper())

if(A>B):
	print(A)
	print(B)
else:
	print(A)
	print(B)

-- EXECUTION TIME:
0.143778
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
NOME:NUME:Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
NOME:NUME:Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
NOME:NUME:WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:11:33) 
-- CODE:
A=input("nome:").upper()
B=input("nume:").upper()

if(A>B):
	print(A)
	print(B)
else:
	print(A)
	print(B)

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:11:45) 
-- CODE:
A=input("nome:").upper()
B=input("nume:").upper()

if(A>B):
	print(A)
	print(B)
else:
	print(B)
	print(A)

-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:12:14) 
-- CODE:
A=input("nome1:").upper()
B=input("nume2:").upper()

if(A>B):
	print(A)
	print(B)
else:
	print(B)
	print(A)

-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:12:20) 
-- CODE:
A=input("nome1:").upper()
B=input("nume2:").upper()

if(A>B):
	print(A)
	print(B)
else:
	print(B)
	print(A)

-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:12:28) 
-- CODE:
A=input("nome1:").upper()
B=input("nume2:").upper()

if(A<B):
	print(A)
	print(B)
else:
	print(B)
	print(A)

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:12:33) 
-- CODE:
A=input("nome1:").upper()
B=input("nume2:").upper()

if(A<B):
	print(A)
	print(B)
else:
	print(B)
	print(A)

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:12:40) 
-- CODE:
A=input("nome1:").upper()
B=input("nume2:").upper()

if(A<B):
	print(A)
	print(B)
else:
	print(B)
	print(A)

-- EXECUTION TIME:
0.200588
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:12:51) 
-- CODE:
A=input("nome1:").upper()
B=input("nume2:")

if(A<B):
	print(A)
	print(B)
else:
	print(B)
	print(A)

-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:13:13) 
-- CODE:
A=input("nome1:")
B=input("nume2:")

if(A<B):
	print(A.upper())
	print(B)
else:
	print(B)
	print(A.upper())

-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:13:19) 
-- CODE:
A=input("nome1:")
B=input("nume2:")

if(A<B):
	print(A.upper())
	print(B)
else:
	print(B)
	print(A.upper())

-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:13:24) 
-- CODE:
A=input("nome1:")
B=input("nume2:")

if(A>B):
	print(A.upper())
	print(B)
else:
	print(B)
	print(A.upper())

-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:13:43) 
-- CODE:
A=input("nome1:")
B=input("nume2:")

if(A>B):
	print(A.upper())
	print(B)
else:
	print(B)
	print(A.upper())

-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:13:48) 
-- CODE:
A=input("nome1:")
B=input("nume2:")

if(A>B):
	print(A.upper())
	print(B)
else:
	print(B)
	print(A.upper())

-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:13:59) 
-- CODE:
A=input("nome1:")
B=input("nume2:")

if(A<B):
	print(A.upper())
	print(B)
else:
	print(B)
	print(A.upper())

-- EXECUTION TIME:
0.160122
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 21:14:00) 
-- CODE:
A=input("nome1:")
B=input("nume2:")

if(A<B):
	print(A.upper())
	print(B)
else:
	print(B)
	print(A.upper())

-- EXECUTION TIME:
0.145946
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:14:01) 
-- CODE:
A=input("nome1:")
B=input("nume2:")

if(A<B):
	print(A.upper())
	print(B)
else:
	print(B)
	print(A.upper())

-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 21:14:12) 
-- CODE:
A=input("nome1:")
B=input("nume2:")

if(A<B):
	print(A.upper())
	print(B)
else:
	print(B)
	print(A.upper())

-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:08) 
-- CODE:
A=input("nome1:")
B=input("nume2:")

if(A.upper()<B.upper()):
	v=A
	d=B
else:
	v=B
	d=A
print(v)
print(d)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:26:22) 
-- CODE:
A=input("nome1:")
B=input("nume2:")

if(A.upper()<B.upper()):
	v=A
	d=B
else:
	v=B
	d=A
print(v)
print(d)
-- EXECUTION TIME:
0.208813
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
